# code_eater

./: Cargo.toml  README.md  mkdocs.yml  run_tests.sh
docs/: index.md  reference.md  runnable_tutorial.md  runnable_tutorial_rendered.md  sample_test.md  tutorial.md  tutorial_rendered.md  usecase.md
src/: main.rs
tests/: errors.rs  integration.rs  test_bin.rs
