[package]
name = "single_source"
version = "0.1.2"
authors = ["Tom Gowan <tomrgowan@gmail.com>"]
edition = "2018"
description = "Generate code files from snippets in md tutorial files"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
regex = "1"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempdir = "0.3.7"
